--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
-.App {
-  text-align: center;
-}
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  background: #fafafa; }
