styles for header

--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -5,5 +5,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;  
-    border: 1px solid black;
+    padding-bottom: 20px;
+    &__logo{
+      height: 35px;
+      width: 150px;
+      background-image: url("./components/header/unamo2.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+    &__link{
+      color: rgba(33, 170, 112, 1);
+      font-size: 14px;
+    }
   }
