--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,10 @@
-
-.wrapper{
-    width: 100%;
-    height: 100vh;
-    box-sizing: border-box;
-    margin: 0;
-    padding:0;
-    display: flex;
-    justify-content: center;
-    background: rgba(250, 250, 250, 1);
-  }
-  
+.wrapper {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  background: #fafafa; 
+}
