--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './components/_userlist.scss';
+
 .wrapper {
   width: 100%;
   height: 100vh;
@@ -8,3 +10,4 @@
   justify-content: center;
   background: #fafafa; 
 }
+
